[package]
name = "callback"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "callback"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "bonsol-interface/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
bonsol-interface = { path = "../../../bonsol/onchain/interface", default-features = false, features = ["anchor"] }
getrandom = { version = "0.1.14", features = ["dummy"] }
